# guardian

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  com.guardian.guardiand.plist  com.guardian.queue-watch.plist
.cursor/rules/: containerized-testing.mdc  monty-python.mdc  pr-and-semver.mdc  pr-install-smoke-test.mdc  pre-push-adversarial-review.mdc  system-guardian.mdc
app/: Package.swift
demos/guardian-barriers-mock/: README.md  run-demo.sh
docs/: claude-code.md  codex.md
hooks/: before-read-file.sh  before-submit-prompt.sh  claude-code-hooks.json  codex-hooks.json  cursorignore-checklist.json  cursorignore_check.py  hook_policy.default.json  hooks.json  install-hooks.sh  iso_to_epoch.py  lib.sh  post-tool-use.sh  pre-tool-use.sh  prompt-gate-common.sh  resources.md  session-start.sh  stop.sh  subagent-start.sh
hooks/claude/: pre-tool-use.sh
hooks/codex/: session-start.sh  user-prompt-submit.sh
hooks/cursor-commands/: guardian-once.md  guardian-snooze.md
hooks/mac/: Guardian-Once.command  Guardian-Snooze-15m.command
plans/: agent-work-queue.md
scripts/: guardian-queue-watch.sh  guardian-queue.sh  guardian-resume.sh  install-claude-hooks.sh  install-codex-hooks.sh  install-queue-watch.sh  install.sh  uninstall.sh
src/: classifier.rs  config.rs  hook_policy.rs  lib.rs  main.rs  session_db.rs  state.rs  validation.rs  zeno.rs
src/docker/: mod.rs  stats.rs  throttle.rs
src/sampler/: cpu.rs  disk.rs  memory.rs  mod.rs  process.rs  swap.rs  thermal.rs
tests/: claude-hook-smoke.sh  codex-hook-smoke.sh
tests/stress/: Dockerfile.test  (+11 more)
(+15 files in other folders)
