[package]
name = "guardian-daemon"
version = "0.1.0"
edition = "2021"
description = "System resource monitor daemon for Cursor agent throttling"
license = "MIT"

[[bin]]
name = "guardiand"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
libc = "0.2"
mach2 = "0.4"
dirs = "6"
